--- a/repl-src/styles/Header.scss
+++ b/repl-src/styles/Header.scss
@@ -1,22 +1,54 @@
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   color: white;
-  .items {
+  flex-shrink: 0;
+  .small-logo {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: 20px;
+    font-style: italic;
+    font-weight: bold;
+    color: #8bd12a;
+    font-size: 17px;
+    cursor: pointer;
+    text-shadow: 0 0 15px rgba(255,255,255,.5), 0 0 10px rgba(255,255,255,.5);
+
+
+  }
+  .items {
+    //margin-right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     a {
-      margin-left: 20px;
-      font-size: 16px;
+      display: block;
+      margin-right: 5px;
+      //font-size: 16px;
+      flex-grow: 1;
+      //padding: 5px 10px;
       color: white;
+      background-color: rgb(61, 66, 71);
+      border-radius: 4px;
+      transition: background-color 0.3s;
+
+      padding: 5px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-decoration: none;
+      i {
+        margin-right: 10px;
+      }
       &:visited {
         color: white;
       }
       &:hover {
-        color: #8bd12a;
+        background-color: #8bd12a;
+        color: black;
+        // /color: #8bd12a;
       }
     }
   }
