--- a/repl-src/styles/main.scss
+++ b/repl-src/styles/main.scss
@@ -7,10 +7,9 @@ body {
 }
 $mainColor: #21252b;
 .CodeMirror {
-  height: 100% !important;
+  flex-grow: 1;
 }
 .layout {
-  height: 100vh;
   display: flex;
   flex-direction: column;
 
@@ -18,21 +17,27 @@ $mainColor: #21252b;
     display: flex;
     flex-grow: 1;
     .left {
+      display: flex;
+      flex-direction: column;
       width: 250px;
       color: white;
-      height: 100%;
+
       flex-shrink: 0;
+
       position: relative;
       .left-menu {
+        flex-grow: 1;
         opacity: 1;
-        transition: transform 0.1s, opacity 0.3s;
+        transition: transform 0.1s, opacity 0.7s;
       }
       &.closed {
-        transform: translateX(-100%);
+
         width: 20px;
 
         .left-menu {
           opacity: 0;
+          display: none;
+
           transform: translateX(-200%);
         }
 
@@ -74,6 +79,7 @@ $mainColor: #21252b;
       }
     }
     .right {
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       .header {
@@ -93,12 +99,13 @@ $mainColor: #21252b;
       display: flex;
       .editor-container {
         height: 100%;
+        display: flex;
+        flex-direction: column;
       }
       .editor {
         width: 50%;
         flex-shrink: 0;
         flex-grow: 1;
-        height: 100%;
 
         position: relative;
 
@@ -118,7 +125,7 @@ $mainColor: #21252b;
         }
       }
       .results {
-        height: 100%;
+        flex-grow: 1;
         width: 50%;
       }
     }
